<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView app:cardCornerRadius="@dimen/mar_padd_5dp"
    style="@style/cardViewStyle"
    app:cardElevation="@dimen/mar_padd_5dp"
    app:cardBackgroundColor="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutStyle"
    android:id="@+id/layout_child_sportsEduTeaching"
    android:orientation="vertical"
    android:layout_margin="@dimen/mar_padd_5dp">

    <TextView
        android:id="@+id/tvSportsNumber"
        style="@style/TextViewStyle1"
        android:text="@string/_1"
        android:layout_width="30dp"
        android:textSize="@dimen/text16sp"
        android:layout_height="30dp"
        android:gravity="center"
        android:background="@drawable/circle"
        android:textColor="@color/whitecolor"
        android:layout_marginTop="2dp"
        android:padding="@dimen/mar_padd_2dp"/>


    <LinearLayout
        style="@style/LinearLayoutStyle"
        android:id="@+id/layout_subChild_SportsEduTeaching"
        android:layout_marginBottom="@dimen/mar_padd_5dp">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etSportsName"
                style="@style/EditTextStyle"
                android:hint="@string/sports_name"
                android:digits="@string/alphabet"
                android:maxLength="15"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etSportsYear"
                style="@style/EditTextStyle"
                android:hint="@string/year"
                android:maxLength="4"
                android:inputType="numberSigned|number"
                />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutStyle">

        <android.support.design.widget.TextInputLayout
           style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etsportsLevel"
                style="@style/EditTextStyle"
                android:hint="@string/level"
                android:inputType="text"
                android:maxLength="15"
               />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etSportsPosition"
                style="@style/EditTextStyle"
                android:hint="@string/position"
                android:inputType="text"
                android:maxLength="15"/>
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayoutStyle">

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etSportsTeamName"
                style="@style/EditTextStyle"
                android:hint="@string/team_name"
                android:digits="@string/alphabet"
                android:maxLength="15"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayoutWeight">

            <EditText
                android:id="@+id/etSportsLocation"
                style="@style/EditTextStyle"
                android:hint="@string/venue_location"
                android:digits="@string/alphabet"
                android:maxLength="15"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


</LinearLayout>
</android.support.v7.widget.CardView>