<LinearLayout style="@style/LinearLayoutStyle"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="@dimen/mar_padd_10dp"
    xmlns:tools="http://schemas.android.com/tools">

<android.support.v7.widget.CardView
    app:cardCornerRadius="@dimen/mar_padd_5dp"
    style="@style/cardViewStyle"
    app:cardElevation="@dimen/mar_padd_5dp"
    app:cardBackgroundColor="#fff"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:id="@+id/achievemetDetailsLayoutClick">
        <TextView
            android:id="@+id/tvExperienceDetails"
            style="@style/TextViewStyle1"
            android:text="@string/experience_details"
            android:textSize="@dimen/text20sp"
            android:layout_height="@dimen/dimen40dp"
            android:textColor="@color/whitecolor"
            android:background="@color/colorOrange"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_AchievemetDetailsViews"
        style="@style/LinearLayoutStyle"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="@dimen/mar_padd_5dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_org_name_dynamic"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/etOrganisationName"
                style="@style/EditTextStyle"
                android:hint="@string/organisation_name"
                android:digits="@string/alphabet"
                android:maxLength="35"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/etOrganisationCity"
                style="@style/EditTextStyle"
                android:hint="@string/organisation_place"
                android:digits="@string/alphabet"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/etEmployeeRoles"
                style="@style/EditTextStyle"
                android:hint="@string/role"
                android:digits="@string/alphabet"
                android:maxLength="30"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/TextInputLayout">
            <EditText
                android:id="@+id/etEmployeeResponsibility"
                style="@style/EditTextStyle"
                android:hint="@string/responsibility"
                android:digits="@string/alphabet"
                android:maxLength="30" />
        </android.support.design.widget.TextInputLayout>



        <LinearLayout
        style="@style/LinearLayoutHorizontal"
        android:layout_margin="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:baselineAligned="false">

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:id="@+id/rlJoiningdate">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_signal_cellular_4_bar_black_24dp"
                android:contentDescription="@string/clickbutton" />

            <EditText
                android:id="@+id/etJoiningDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/joining_date"
                android:textSize="19sp"
                android:textColor="#414141"
                android:focusable="false"
                android:gravity="center"
                android:textColorHint="#c44704"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:padding="5dp"
                tools:ignore="TextFields">

            </EditText>

        </RelativeLayout>


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:layout_marginStart="5dp"
            android:id="@+id/rlLeavingdate">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:src="@drawable/ic_signal_cellular_4_bar_black_24dp"
                android:contentDescription="@string/clickbutton" />

            <EditText
                android:id="@+id/etLeavingDate"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/leaving_date"
                android:textSize="19sp"
                android:textColor="#414141"
                android:focusable="false"
                android:textColorHint="#c44704"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:layout_centerInParent="true"
                android:padding="5dp"
                tools:ignore="TextFields"
                android:enabled="true">

            </EditText>

        </RelativeLayout>

    </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_contact_experience"
            style="@style/LinearLayoutStyle"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutWeight">
                <EditText
                    android:id="@+id/etHRNumber"
                    style="@style/EditTextStyle"
                    android:hint="@string/hr_number"
                    android:inputType="number"
                    android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                style="@style/TextInputLayoutWeight">

                <EditText
                    android:id="@+id/etTotalExperience"
                    style="@style/EditTextStyle"
                    android:hint="@string/total_experience"
                    android:maxLength="4"
                    android:focusable="true"
                    android:inputType="number|numberDecimal" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            style="@style/LinearLayoutStyle"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvExperience"
                android:text="@string/attach_documents"
                style="@style/TextViewStyle1"
                android:layout_weight="1"
                android:layout_width="0dp"/>

            <ImageView
                android:id="@+id/ivAttachExperienceDocs"
                android:src="@drawable/ic_attachment_black_24dp"
                tools:ignore="ContentDescription"
                style="@style/ImageviewStyle"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAttachExperienceDocs"
            style="@style/recyclerViewStyle"/>


    </LinearLayout>





</android.support.v7.widget.CardView>
</LinearLayout>