<android.support.v7.widget.CardView app:cardCornerRadius="@dimen/mar_padd_5dp"
    style="@style/cardViewStyle"
    app:cardElevation="@dimen/mar_padd_5dp"
    app:cardBackgroundColor="@color/whitecolor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        style="@style/RelativeLayoutStyle"
        android:id="@+id/achievemetDetailsLayoutClick"
        android:layout_margin="@dimen/mar_padd_5dp">

        <TextView
            android:id="@+id/tvAchievemetNumber"
            style="@style/TextViewStyle1"
            android:text="@string/_1"
            android:layout_width="@dimen/dimen30dp"
            android:textSize="@dimen/text16sp"
            android:layout_height="@dimen/dimen30dp"
            android:gravity="center"
            android:background="@drawable/circle"
            android:textColor="@color/whitecolor"
            android:layout_marginTop="@dimen/mar_padd_2dp"
            android:padding="@dimen/mar_padd_2dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_AchievemetDetailsViews"
        style="@style/LinearLayoutStyle"
        android:visibility="visible"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen30dp"
        android:padding="@dimen/mar_padd_5dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_org_name_dynamic"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/etEmployeeAchievementTitle"
                style="@style/EditTextStyle"
                android:hint="@string/achievement_title"
                android:digits="@string/alphabet"
                android:maxLength="35"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_contact_experience"
            style="@style/LinearLayoutStyle"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_org_contact_dynamic"
                style="@style/TextInputLayout"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etEmployeeAchievementYear"
                    style="@style/EditTextStyle"
                    android:hint="@string/year"
                    android:inputType="numberSigned|number"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/ti_org_Experience_dynamic"
                style="@style/TextInputLayout"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etEmployeeAchievementPlace"
                    style="@style/EditTextStyle"
                    android:hint="@string/place"
                    android:digits="@string/alphabet"
                    android:maxLength="15" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ti_org_place_dynamic"
            style="@style/TextInputLayout">

            <EditText
                android:id="@+id/etEmployeeAchievementDescription"
                style="@style/EditTextStyle"
                android:hint="@string/description"
                android:digits="@string/alphabet"
                android:maxLength="128"
                android:inputType="textMultiLine"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>



</android.support.v7.widget.CardView>